--- a/backend/brands-backend/package.json
+++ b/backend/brands-backend/package.json
@@ -13,8 +13,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^29.7.0",
