FrontEnd: adding images

--- a/backend/brands-backend/package.json
+++ b/backend/brands-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app/app.js",
+    "start": "nodemon app/app.js",
     "test": "jest --watchAll"
   },
   "author": "",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
