--- a/frontend/Brand/package.json
+++ b/frontend/Brand/package.json
@@ -13,7 +13,10 @@
     "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scroll-carousel-react": "^1.0.0"
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "scroll-carousel-react": "^1.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
