--- a/frontend/Brand/package.json
+++ b/frontend/Brand/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bulma": "^0.9.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
